lbb/frontend/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-frontend
spec:
  selector:
    app: counter-frontend
  ports:
  - name: 3100-tcp
    protocol: TCP
    port: 3100
    targetPort: 3100
  - name: 3000-tcp
    protocol: TCP
    port: 3000
    targetPort: 3000
