lbb/frontend/frontend-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: counter-frontend
  name: counter-frontend
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: counter-frontend
